--- a/pages/dashboard.html
+++ b/pages/dashboard.html
@@ -34,7 +34,7 @@
 <body>
 <nav class="navbar bg-dark">
   <div class="container-fluid" style="text-align: center;">
-            <a href="/" class="navbar-brand mb-0 h1 flex-grow-1" style="font-size: 50px; font-family: 'Poppins', sans-serif; color: white;">Kosciuszko</a>
+            <a href="/" class="navbar-brand mb-0 h1 flex-grow-1" style="font-size: 50px; font-family: 'Poppins', sans-serif; color: white;">avPass Use-Case Demo</a>
     <div class="dropdown text-right">
           <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
       {{current_user.username}}
@@ -51,5 +51,6 @@
 
 </nav>
 
+<h1 style="text-align: center; color: white;">You have successfully logged in using avPass oauth.</h1>
 </body>
 </html>
