--- a/pages/index.html
+++ b/pages/index.html
@@ -16,13 +16,8 @@
     </style>
 </head>
 <body>
-<h1>./Kosciuszko</h1>
-<h3>This is the default page, edit it to your liking @templates/index.html.</h3>
-<h1>Quick links.</h1>
-<div>
-    <button onclick="window.location.href='/login'">Login</button>
-    <button onclick="window.location.href='/dashboard'">Dashboard</button>
-    <button onclick="window.location.href='/admin'">Admin Panel</button>
-</div>
+<h1> Welcome to the avPass use-case demo!</h1>
+<br>
+<h1> This web application uses avPass as for oauth to login the user with flask and flask-login!</h1>
 </body>
 </html>
